[package]
name = "rocketmq-client-rust"
version = "0.1.0"
authors = ["guoyong <overearth@gmail.com>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "A Rust binding for RocketMQ using rocketmq-client-cpp"
readme = "README.md"
repository = "https://github.com/marvinguo/rocketmq-client-rust.git"
keywords = [ "rust", "rocketmq" ]
edition = "2018"

build = "build.rs"

[dependencies]
libc = "0.2"

[dev-dependencies]
const-cstr = "0.2"
uuid = { version = "0.7", features = ["v4"] }

[build-dependencies]
cc = { version = "^1.0", features = ["parallel"] }
make-cmd = "0.1"
bindgen = "0.43"
glob = "0.2.11"
